# beelink_ai_stack

./: .config.env.example  .env.example  .gitignore  .gitmodules  .markdownlint-cli2.yaml  .rooignore.example  AGENTDIARY.md  AGENTS.md  CHANGELOG.md  HANDOFF.md  INDEX.md  MEMORY.md  README.md  TODO.md  agents-init.md  enhance_prompt_engineering.md  enhance_prompt_engineering_v3.md  open_web_ui_apache_tika_install_setup.md
transcript-miner/: .gitignore  CHANGELOG.md  README.md  SECRETS.md  pyproject.toml
transcript-miner/config/: __init__.py  config_ai_knowledge.yaml  config_global.yaml  config_investing.yaml  config_investing_companies.yaml  config_investing_test.yaml  config_stocks_crypto.yaml  config_wsl_optimized.yaml
transcript-miner/docs/: PRD.md  README.md  architecture.md  config.md
transcript-miner/logs/: README.md
transcript-miner/src/: __init__.py  __main__.py
transcript-miner/templates/: report_investing_de.md  report_investing_en.md  report_stocks_crypto_de.md  report_stocks_crypto_en.md  report_stocks_de.md  report_stocks_en.md
transcript-miner/tests/: _overview.md  conftest.py  test_aggregation.py  test_analysis_runner.py  test_channel_namespace_normalization.py  test_cleanup_policy.py  test_config.py  test_config_global_merge.py  test_generate_filename_base.py  test_llm_output_validation_fixtures.py  test_llm_output_validation_policy.py  test_llm_report_backend.py  test_llm_runner.py  test_multi_config_cli_multi_run.py  test_multichannel_output_validation.py  test_output_policy.py  test_process_channel_integration.py  test_progress_handling.py  (+7 more)
(+371 files in other folders)
